--- a/viikko4/int-joukko/pyproject.toml
+++ b/viikko4/int-joukko/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
